<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- Nagłówek -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_details"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="20dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="35dp"
        android:paddingBottom="16dp"
        android:layout_gravity="top|start"/>


<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background"
        android:paddingHorizontal="32dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/room_1"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/button_edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_image"
            android:layout_gravity="center"
            app:backgroundTint="@drawable/button_background"
            android:textColor="@color/button"
            android:layout_marginVertical="10dp"/>

        <!-- Pole nazwy pokoju -->
        <TextView
            android:id="@+id/edit_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textSize="15dp"
            android:layout_gravity="top|start"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_marginBottom="10dp" />

        <!-- Pole opisu pokoju -->
        <TextView
            android:id="@+id/edit_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textSize="15dp"
            android:layout_gravity="top|start"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_marginBottom="10dp"/>


        <!-- Lista roślin przypisanych do pokoju -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plants_assigned"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textSize="15dp"
            android:layout_gravity="top|start"
            android:layout_marginBottom="5dp"/>

        <!-- Empty Plants Message -->
        <TextView
            android:id="@+id/text_empty_plants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_plants_assigned"
            android:textColor="@color/text"
            android:textSize="15dp"
            android:visibility="gone"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginTop="5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_plants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/button_add_plant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/add_plant"
            app:backgroundTint="@color/green"
            android:textColor="@color/button"/>

        <Button
            android:id="@+id/button_water_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_all"
            android:visibility="gone"
            android:layout_gravity="center"
            app:backgroundTint="@drawable/button_background"
            android:textColor="@color/button"
            android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <!-- Save Changes Button -->
        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            app:backgroundTint="@drawable/button_background"
            android:textColor="@color/button"
            android:layout_marginEnd="10dp"/>

        <!-- Delete Plant Button -->
        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_room"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@color/button"/>
    </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</LinearLayout>