<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- Nagłówek -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_details"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="20dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="35dp"
        android:paddingBottom="16dp"
        android:layout_gravity="top|start"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:paddingHorizontal="32dp"
            android:paddingBottom="16dp">

            <!-- Plant Image -->
            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/plant_1"
                android:layout_gravity="center" />

            <!-- Change Image Button -->
            <Button
                android:id="@+id/button_edit_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_image"
                android:layout_gravity="center"
                app:backgroundTint="@drawable/button_background"
                android:textColor="@color/button"
                android:layout_marginVertical="10dp"/>

            <!-- Plant Name -->
            <TextView
                android:id="@+id/edit_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:textSize="15dp"
                android:layout_gravity="top|start"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <!-- Pole do wpisywania nazwy -->
                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:background="@drawable/rounded_edittext"
                    android:padding="12dp"/>

                <!-- Przycisk z ikonką -->

                <ImageButton
                    android:id="@+id/button_suggest_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@drawable/button_background"
                    android:background="@drawable/circle_button_background"
                    android:src="@drawable/baseline_auto_awesome_24"
                    app:tint="@color/button"
                    android:layout_marginStart="6dp"
                    />


            </LinearLayout>

            <!-- Plant Description -->
            <TextView
                android:id="@+id/edit_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:textSize="15dp"
                android:layout_gravity="top|start"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:layout_marginBottom="10dp"/>

            <!-- Room Selection Spinner -->
            <TextView
                android:id="@+id/spinner_room_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:textSize="15dp"
                android:layout_gravity="top|start"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spinner_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle_with_arrow"
                android:padding="14dp"
                android:layout_marginBottom="10dp"
                android:popupBackground="@color/item"/>

            <!-- Watering Interval -->
            <TextView
                android:id="@+id/edit_watering_interval_days_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watering_frequency"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:textSize="15dp"
                android:layout_gravity="top|start"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edit_watering_interval_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:layout_marginBottom="10dp"/>

            <!-- Note -->
            <TextView
                android:id="@+id/note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:textSize="15dp"
                android:layout_gravity="top|start"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/edit_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="start"
                android:padding="12dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corners_note"/>

            <!-- Event Selection RadioGroup -->
            <RadioGroup
                android:id="@+id/radio_group_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:id="@+id/radio_watering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waterings"
                    android:button="@null"
                    android:paddingVertical="12dp"
                    android:paddingEnd="12dp"
                    android:paddingStart="14dp"
                    android:background="@drawable/radio_button_left"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/button"
                    android:textAlignment="center"/>

                <RadioButton
                    android:id="@+id/radio_fertilizing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertilizings"
                    android:button="@null"
                    android:padding="12dp"
                    android:background="@drawable/radio_button_middle"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/button"
                    android:textAlignment="center"/>

                <RadioButton
                    android:id="@+id/radio_repotting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_right"
                    android:button="@null"
                    android:paddingVertical="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="14dp"
                    android:text="@string/repottings"
                    android:textColor="@color/button"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </RadioGroup>

            <!-- Watering Section -->
            <TextView
                android:id="@+id/text_empty_watering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_waterings"
                android:textColor="@color/text"
                android:textSize="15dp"
                android:visibility="gone"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_watering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_watering"
                android:layout_gravity="center"
                app:backgroundTint="@color/green"
                android:textColor="@color/button"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <!-- Fertilizing Section -->
            <TextView
                android:id="@+id/text_empty_fertilizing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_fertilizings"
                android:textColor="@color/text"
                android:textSize="15dp"
                android:visibility="gone"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_fertilizing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_fertilize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_fertilizing"
                android:layout_gravity="center"
                app:backgroundTint="@color/green"
                android:textColor="@color/button"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <!-- Repotting Section -->
            <TextView
                android:id="@+id/text_empty_repotting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_repottings"
                android:textColor="@color/text"
                android:textSize="15dp"
                android:visibility="gone"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_repotting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_repot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_repotting"
                android:layout_gravity="center"
                app:backgroundTint="@color/green"
                android:textColor="@color/button"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone"/>

            <!-- Save and Delete Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_changes"
                    app:backgroundTint="@drawable/button_background"
                    android:textColor="@color/button"
                    android:layout_marginEnd="10dp"/>

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_plant"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:textColor="@color/button"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>