<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginHorizontal="8dp"
    android:gravity="center_vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/cardview_compat_inset_shadow">

        <ImageView
            android:id="@+id/image_plant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/item"
            android:adjustViewBounds="true"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/rounded_text"
        android:padding="14dp"
        android:layout_marginStart="-6dp">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"/>

        <!-- Opis rośliny -->
        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plant_description"
            android:textSize="12sp"
            android:textColor="@color/text"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginTop="4dp"/>

        <!-- Pokój -->
        <TextView
            android:id="@+id/text_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textSize="12sp"
            android:textColor="@color/text"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"/>

        <!-- Częstotliwość podlewania -->
        <TextView
            android:id="@+id/text_watering_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watering_every"
            android:textColor="@color/text"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"/>
    </LinearLayout>
</LinearLayout>